fixed z-index

--- a/style.less
+++ b/style.less
@@ -99,6 +99,7 @@ a {
 #banner {
   display: none;
   @media (min-width: 768px) {
+    z-index: 100000;
     display: block;
     position: fixed;
     width: 70vw;
